# foursquare-swarm-ical

./: .cookiecutter.json  CONTRIBUTING.md  Justfile  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: check.yaml  lint.yaml  pypi.yaml
.readme.md/: config-sample.md  help.md
src/foursquare_swarm_ical/: __main__.py  cli.py  config_file.py  db.py  emoji.py  emoji.yaml  ical.py  main.py
tests/: fixme.md  test_all.py  test_ical.py  test_main.py  test_sync.py
tests/cassettes/test_all/: test_all.yaml
tests/cassettes/test_main/: test_main.yaml
tests/readme/: config-sample.md  help.md  make-help.md
