[build-system]
requires = [
    "setuptools >= 64.0",
    "setuptools_scm[toml] >= 6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "foursquare-swarm-ical"
dynamic = ["version"]
authors = [{name = "Tomáš Janoušek", email = "tomi@nomi.cz"}]
license = {text = "MIT"}
description = "Sync Foursquare Swarm check-ins to local sqlite DB and generate iCalendar"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
requires-python = "~= 3.7"
dependencies = [
    "PyYAML",
    "click ~= 8.0",
    "click-config-file",
    "foursquare",
    "icalendar >= 5.0.2",
    "importlib-metadata; python_version<'3.10'",
    "importlib-resources; python_version<'3.9'",
    "platformdirs >= 2.1",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/liskin/foursquare-swarm-ical"

[project.optional-dependencies]
dev = [
    "build >= 0.7",
    "cram",
    "flake8",
    "isort >= 5.0",
    "mypy >= 0.900",
    "twine",
    "types-PyYAML",
    "types-pytz",
]
test = [
    "pytest",
    "pytest-recording",
]

[project.scripts]
foursquare-swarm-ical = "foursquare_swarm_ical.main:main"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.mypy]
python_executable = ".venv/bin/python3"
show_error_codes = true

[tool.isort]
profile = "open_stack"

# vim:set et:
