[build-system]
requires = [
    "setuptools >= 64.0",
    "setuptools_scm[toml] >= 6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "foursquare-swarm-ical"
description = "Sync Foursquare Swarm check-ins to local sqlite DB and generate iCalendar"
authors = [{name = "Tomáš Janoušek", email = "tomi@nomi.cz"}]
license = {text = "MIT"}
readme = {file="README.md", content-type="text/markdown"}
dynamic = ["version"]
classifiers = [ # https://pypi.org/classifiers/
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
requires-python = "~= 3.8"
dependencies = [
    "PyYAML",
    "click ~= 8.0",
    "click-config-file",
    "foursquare",
    "icalendar >= 5.0.2",
    "importlib-metadata; python_version<'3.10'",
    "importlib-resources; python_version<'3.9'",
    "platformdirs >= 2.1",
]

[project.optional-dependencies]
dev = [
    "build >= 0.7",
    "flake8",
    "isort >= 5.0",
    "mypy >= 0.900",
    "prysk == 0.17.0",
    "twine",
    "types-PyYAML",
    "types-pytz",
]
test = [
    "pytest",
    "pytest-recording",
]

[project.urls]
"Homepage" = "https://github.com/liskin/foursquare-swarm-ical"
"Release Notes" = "https://github.com/liskin/foursquare-swarm-ical/releases"
"Issues" = "https://github.com/liskin/foursquare-swarm-ical/issues"
"CI" = "https://github.com/liskin/foursquare-swarm-ical/actions"
"Donations (GitHub)" = "https://github.com/sponsors/liskin"
"Donations (PayPal)" = "https://www.paypal.me/lisknisi/5EUR"

[project.scripts]
foursquare-swarm-ical = "foursquare_swarm_ical.cli:cli"

[tool.gha-check-distro]
dependencies-apt = [
    "python3-build",
    "python3-click",
    "python3-configobj",
    "python3-flake8",
    "python3-icalendar",
    "python3-importlib-metadata",
    "python3-importlib-resources",
    "python3-isort",
    "python3-multidict",
    "python3-mypy",
    "python3-pep517",
    "python3-pip",
    "python3-pip-whl",
    "python3-platformdirs",
    "python3-pytest",
    "python3-typeshed",
    "python3-vcr",
    "python3-venv",
    "python3-yaml",
    "python3-yarl",
    "twine",
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.mypy]
python_executable = ".venv/bin/python3"
show_error_codes = true

[tool.isort]
profile = "open_stack"

[tool.ruff]
line-length = 120

# vim:set et:
