[metadata]
name = foursquare_swarm_ical
url = https://github.com/liskin/foursquare-swarm-ical

author = Tomáš Janoušek
author_email = tomi@nomi.cz
license = MIT

description = "Sync Foursquare Swarm check-ins to local sqlite DB and generate iCalendar"
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = ~= 3.7
install_requires =
    foursquare
    icalendar
    pytz
tests_require =

[options.extras_require]
dev =
    flake8
    isort
    mypy
    pep517
    python-language-server
    twine
test =

[options.packages.find]
where=src

[options.package_data]
* =
    py.typed

[options.entry_points]
console_scripts =
    foursquare-swarm-ical = foursquare_swarm_ical.main:main

[mypy]
python_executable = .venv/bin/python3
show_error_codes = True

[flake8]
extend-exclude = .venv
max-line-length = 120

# vim:set et:
