[metadata]
name = foursquare-swarm-ical
url = https://github.com/liskin/foursquare-swarm-ical

author = Tomáš Janoušek
author_email = tomi@nomi.cz
license = MIT

description = "Sync Foursquare Swarm check-ins to local sqlite DB and generate iCalendar"
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Utilities

[options]
package_dir =
    =src
packages = find:
python_requires = ~= 3.7
install_requires =
    PyYAML
    click ~= 8.0
    click-config-file
    foursquare
    icalendar
    importlib-metadata; python_version<'3.10'
    importlib-resources; python_version<'3.9'
    platformdirs >= 2.1
    pytz
tests_require =

[options.extras_require]
dev =
    build >= 0.7
    cram
    flake8
    isort >= 5.0
    mypy >= 0.730
    twine
    types-PyYAML
    types-pytz
test =
    pytest
    pytest-recording

[options.packages.find]
where=src

[options.package_data]
* =
    emoji.yaml
    py.typed

[options.entry_points]
console_scripts =
    foursquare-swarm-ical = foursquare_swarm_ical.main:main

[mypy]
python_executable = .venv/bin/python3
show_error_codes = True

[flake8]
extend-exclude = .venv
max-line-length = 120

# vim:set et:
